--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.HomeFragment">
+    tools:context=".ui.home.HomeFragment">
 
     <View
         android:id="@+id/homeTopView"
@@ -106,7 +106,7 @@
         android:backgroundTint="@color/black"
         android:layout_marginHorizontal="10dp"
         android:layout_marginBottom="20dp"
-        android:text="@string/homeButton"
+        android:text="@string/home_button"
         app:layout_constraintBottom_toBottomOf="parent" />
 
 
